--- a/lesson36/css/style.css
+++ b/lesson36/css/style.css
@@ -7,8 +7,8 @@
     background: #e8eaeb;
     overflow: auto;
     display: inline-block;
-    width: 1525px;
-    height: 550px;
+    max-width: 1525px;
+    max-height: 550px;
     border: 1px #080808;
     border-style: ridge;
     border-top-left-radius: 30px;
@@ -24,8 +24,8 @@
     border: 1px solid rgb(5, 4, 4);
     border-radius: 30px;
     box-shadow: inset 0px 0px 5px 1px;
-    height: 220px;
-    width: 280px;
+    max-height: 220px;
+    max-width: 280px;
     padding: 20px 30px;
     margin: 7px 10px 7px 10px;
 
